--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-pyeda==0.28.0
-PyVerilator==0.1.0
+codecov==2.1.8
+coverage==5.2.1
 networkx==2.4
-python_sat==0.1.6.dev5
+pdoc3==0.8.4
+pyeda==0.28.0
+python-sat==0.1.6.dev4
+PyVerilator==0.1.0
 pyverilog==1.2.1
-pysat==2.2.1
