added parsing files to setup.py and manifest

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
 include README.md
 include circuitgraph/netlists/*
+include circuitgraph/parsing/verilog.lark
 include docs/*
 include requirements.txt
 include LICENSE
