--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,13 @@
 language: python
+python:
+  - "3.6"
+  - "3.7"
+  - "3.8"
+  - "3.9"
+before_install:
+  - sudo add-apt-repository -y ppa:saltmakrell/ppa
+  - sudo apt-get -q update
+  - sudo apt-get -y install yosys
 install: 
   - pip install -r requirements.txt
   - pip install .
