Pysat is no longer a necessary dependency. It is not a requirement in setup.py and is not imported until 'cnf' or 'construct_solver' is run

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_install:
   - sudo apt-get -y install yosys
 install: 
   - pip install -r requirements.txt
+  - pip install python-sat
   - pip install .
 script: coverage run -m unittest
 after_success: codecov
