--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,7 +29,7 @@ jobs:
         sudo apt-get install yosys
         python -m pip install --upgrade pip
         python -m pip install flake8
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        python -m pip install python-sat
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
