Ran pre-commit on all files

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,4 +23,4 @@ repos:
     rev: v1.4
     hooks:
       - id: docformatter
-        args: ["--in-place", "--blank", "-r", "circuitgraph"]
+        args: ["--in-place", "--blank", "--pre-summary-newline", "-r", "circuitgraph", "-e", "tests"]
