--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,7 @@ repos:
     hooks:
     - id: isort
       name: isort (python)
-      args: ["--profile",  "black"]
+      args: ["--profile",  "black", "--skip", "__init__.py", "--filter-files"]
   - repo: https://github.com/asottile/pyupgrade
     rev: v2.31.0
     hooks:
